# tidyarxiv

./: .gitignore  README.md  arxiv.example  arxiv.py  pyproject.toml  tidyarxiv.cfg.example
src/: arxiv.py
tidyarxiv/: tidyarxiv.py
